--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Flexbox and BEM</title>
   </head>
@@ -11,75 +24,47 @@
     <!-- Square container -->
 
     <div class="container">
-      <div class="container-square container-content-first-block">
+      <div class="container-square first-block">
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
       </div>
 
-      <div class="container-square container-content-second-block">
+      <div class="container-square second-block">
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
       </div>
 
-      <div class="container-square container-content-third-block">
+      <div class="container-square third-block">
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
       </div>
 
-      <div class="container-square container-content-fourth-block">
+      <div class="container-square fourth-block">
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
       </div>
 
-      <div class="container-square container-content-fifth-block">
-        <div class="container-square-item"></div>
-        <div class="container-square-item"></div>
-        <div class="container-square-item"></div>
+      <div class="container-square fifth-block">
+        <div class="container-square-item">
+          <p>Some text</p>
+        </div>
+        <div class="container-square-item">
+          <p>Some text</p>
+        </div>
+        <div class="container-square-item">
+          <p>Some text</p>
+        </div>
       </div>
 
-      <div class="container-square container-content-sixt-block">
+      <div class="container-square sixt-block">
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
         <div class="container-square-item"></div>
       </div>
     </div>
-
-    <!-- Circle container -->
-    <!-- 
-    <div class="container">
-      <div class="container-circle container-content-first-block">
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-      </div>
-
-      <div class="container-circle container-content-second-block">
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-      </div>
-
-      <div class="container-circle container-content-third-block">
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-      </div>
-
-      <div class="container-circle container-content-fourth-block">
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-      </div>
-
-      <div class="container-circle container-content-fifth-block">
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-        <div class="container-circle-item"></div>
-      </div>
-    </div> -->
   </body>
 </html>
